Simplify progress header and refine permit cards

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
             <div class="progress-eyebrow">Current step</div>
             <div class="progress-title" id="progressTitle">Step 1 · Choose what and where</div>
             <div class="progress-sub" id="progressSub">In progress</div>
-            <div class="progress-note">Selections save automatically. You can edit later.</div>
           </div>
           <div class="progress-indicator" aria-hidden="true">
             <div class="progress-track">
@@ -94,23 +93,11 @@
               <span class="dot" data-progress-dot="1"></span>
               <span class="dot" data-progress-dot="2"></span>
             </div>
-          </div>
-        </div>
-        <div class="progress-summary" role="list">
-          <div class="progress-item" role="listitem" data-progress-step="0">
-            <div class="progress-label">Step 1</div>
-            <div class="progress-text" id="summaryStep1">Choose what you are collecting and where.</div>
-            <button class="progress-edit" type="button" data-edit-step="0">Edit</button>
-          </div>
-          <div class="progress-item" role="listitem" data-progress-step="1">
-            <div class="progress-label">Step 2</div>
-            <div class="progress-text" id="summaryStep2">Select a permit and quantity.</div>
-            <button class="progress-edit" type="button" data-edit-step="1">Edit</button>
-          </div>
-          <div class="progress-item" role="listitem" data-progress-step="2">
-            <div class="progress-label">Step 3</div>
-            <div class="progress-text" id="summaryStep3">Confirm acknowledgements and purchaser info.</div>
-            <button class="progress-edit" type="button" data-edit-step="2">Edit</button>
+            <div class="progress-dot-labels">
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+            </div>
           </div>
         </div>
       </section>
