--- a/index.html
+++ b/index.html
@@ -78,26 +78,28 @@
       </div>
 
       <section class="progress-header" aria-label="Progress" id="progressHeader">
-        <div class="progress-main">
-          <div>
-            <div class="progress-eyebrow">Current step</div>
-            <div class="progress-title" id="progressTitle">Step 1 · Choose what and where</div>
-            <div class="progress-sub" id="progressSub">In progress</div>
-          </div>
-          <div class="progress-indicator" aria-hidden="true">
-            <div class="progress-track">
-              <div class="progress-bar" id="progressBar"></div>
-            </div>
-            <div class="progress-dots">
-              <span class="dot" data-progress-dot="0"></span>
-              <span class="dot" data-progress-dot="1"></span>
-              <span class="dot" data-progress-dot="2"></span>
-            </div>
-            <div class="progress-dot-labels">
-              <span>1</span>
-              <span>2</span>
-              <span>3</span>
-            </div>
+        <div class="progress-status sr-only" aria-live="polite">
+          <div class="progress-title" id="progressTitle">Step 1 · Choose what and where</div>
+          <div class="progress-sub" id="progressSub">In progress</div>
+        </div>
+        <div class="progress-stepper" role="navigation" aria-label="Permit steps">
+          <ol class="progress-steps" id="progressSteps">
+            <li class="progress-step" data-progress-step="0">
+              <span class="progress-label">Choose what and where</span>
+              <span class="progress-dot" aria-hidden="true"></span>
+            </li>
+            <li class="progress-step" data-progress-step="1">
+              <span class="progress-label">Select permit</span>
+              <span class="progress-dot" aria-hidden="true"></span>
+            </li>
+            <li class="progress-step" data-progress-step="2">
+              <span class="progress-label">Agreements & purchaser info</span>
+              <span class="progress-dot" aria-hidden="true"></span>
+            </li>
+          </ol>
+          <div class="progress-line" aria-hidden="true">
+            <span class="progress-line-bg"></span>
+            <span class="progress-line-fill" id="progressBar"></span>
           </div>
         </div>
       </section>
