--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="hero-band">
         <section class="pagehead" aria-label="Page title and instructions">
           <h1>Online Forest Product Permits</h1>
-          <p class="hero-subtitle">Choose what you’re collecting, select a permit, and receive your permit by email.</p>
+          <p class="hero-subtitle">Choose what and where you’re collecting, select a permit, and complete checkout. We’ll email your permit package to you.</p>
           <p class="federal-note">Permits obtained through this site are issued by the Bureau of Wandering Lands.</p>
 
           <div class="alert" role="status" aria-live="polite">
