--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <div class="progress-stepper" role="navigation" aria-label="Permit steps">
           <ol class="progress-steps" id="progressSteps">
             <li class="progress-step" data-progress-step="0">
-              <span class="progress-label">Choose what and where</span>
+              <span class="progress-label">What + Where</span>
               <span class="progress-dot" aria-hidden="true"></span>
             </li>
             <li class="progress-step" data-progress-step="1">
-              <span class="progress-label">Select permit</span>
+              <span class="progress-label">Permit</span>
               <span class="progress-dot" aria-hidden="true"></span>
             </li>
             <li class="progress-step" data-progress-step="2">
-              <span class="progress-label">Agreements & permit holder info</span>
+              <span class="progress-label">Agree + Info</span>
               <span class="progress-dot" aria-hidden="true"></span>
             </li>
           </ol>
