--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Online Forest Product Permits — Prototype</title>
+  <title>Forest Product Permits | Bureau of Wandering Lands</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="images/favicon.ico" />
 </head>
@@ -62,7 +62,8 @@
     <div class="wrap">
       <div class="hero-band">
         <section class="pagehead" aria-label="Page title and instructions">
-          <h1>Online Forest Product Permits</h1>
+          <h1>Get a Forest Product Permit</h1>
+          <p class="issuer-line">Issued by the Bureau of Wandering Lands (BWL)</p>
           <p class="hero-subtitle">Choose what and where you’re collecting, select a permit, and complete checkout. We’ll email your permit package to you.</p>
           <div class="alert" role="status" aria-live="polite">
             <div class="icon" aria-hidden="true">i</div>
