Refine mobile permit selection layout

--- a/index.html
+++ b/index.html
@@ -405,6 +405,19 @@ Replace this demo text with the authoritative terms and conditions used by your 
 
       </section>
     </div>
+
+    <dialog id="docsDialog" class="docs-dialog" aria-labelledby="docsDialogTitle" aria-modal="true">
+      <div class="docs-dialog-inner">
+        <div class="docs-dialog-head">
+          <div>
+            <h2 id="docsDialogTitle">Maps &amp; permit rules</h2>
+            <div id="docsDialogSubtitle" class="docs-dialog-subtitle"></div>
+          </div>
+          <button type="button" class="icon-btn" id="docsDialogClose" aria-label="Close maps and permit rules">✕</button>
+        </div>
+        <div id="docsDialogBody" class="docs-dialog-body"></div>
+      </div>
+    </dialog>
   </main>
 
   <footer>
