Revert "Remove MOT logo and enlarge BWL logo in agency bar"

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="wrap">
       <div class="row">
         <div class="agency-logos" aria-hidden="true">
+          <img class="agency-logo mot" src="logos/MOT_logo.png" alt="" />
           <img class="agency-logo bwl" src="logos/BWL_logo.png" alt="" />
         </div>
         <div class="agency-title" aria-label="United Regions of Elsewhere Ministry of Outside Things, Bureau of Wandering Lands">
