Update product sale windows and coming soon section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
             <div class="step-body">
               <div class="step-body-inner">
               <div id="locationNotice" class="location-note" style="display:none;" aria-live="polite"></div>
+              <div id="comingSoonSection" class="coming-soon" style="display:none;" aria-live="polite">
+                <div id="comingSoonList"></div>
+              </div>
               <div class="products" id="productList" role="radiogroup" aria-label="Available permits"></div>
 
               <div id="qtySection" style="display:none;">
