Fix closing tag for h3 element in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="hero-band">
         <section class="pagehead" aria-label="Page title and instructions">
           <h1>Get a Forest Product Permit</h1>
-          <h3>Issued by the Bureau of Wandering Lands (BWL)<h3>
+          <h3>Issued by the Bureau of Wandering Lands (BWL)</h3>
           <p class="hero-subtitle">Choose what and where you’re collecting, select a permit, and complete checkout. We’ll email your permit package to you.</p>
           <div class="alert" role="status" aria-live="polite">
             <div class="icon" aria-hidden="true">i</div>
