Improve state restore and form behavior

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <section class="layout" style="margin-top: 8px;">
         <div class="card" role="region" aria-label="Form content">
 
-          <div class="error" id="errorBox" aria-hidden="true" tabindex="-1">
+          <div class="error" id="errorBox" role="alert" aria-live="assertive" aria-hidden="true" tabindex="-1">
             <strong>Fix the following to continue:</strong>
             <ul id="errorList"></ul>
           </div>
